--- a/gb/23/8/7/n14049436.md
+++ b/gb/23/8/7/n14049436.md
@@ -17,10 +17,6 @@
 <p>张蕊仙说，为防范疫情扩散，已前往军营及社区进行疫情调查、孳生源清除、化学防治及民众卫教等工作，疾管署8月4日已派机动防疫队协助；目前营区的718位官士兵每天接受早晚2次的健康监测，卫生局也提供NS1快筛试剂给医官，目前疫情在严密监控当中。</p>
 <p>张蕊仙呼吁，近期减少到公告的登革热疫区旅游或访亲，如确有必要前往，请穿着浅色长袖衣裤、长袖薄外套，使用政府机关核可含DEET敌避/待乙妥、Picaridin派卡瑞丁或IR-3535伊默克等有效成分之防蚊液；如发现有发烧、头痛、后眼窝痛、肌肉关节痛、出疹等疑似症状，应尽速就医，并主动告知旅游活动史。鉴于登革热疫情升温，民众若有不遵守防疫措施者，将依违反传染病防治法第43条第2项规定，处新台币六万元以上三十万元以下罚锾。</p>
 <p>责任编辑：筱珮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042924.md#1">登革热确诊 云林新增6例  吁民众清除不用容器</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/29/n14044182.md#1">台风过后 屏县府吁全力防堵登革热</a></li>
@@ -28,41 +24,35 @@
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045819.md#1">8／15起轻症自主管理减为5天 支持性给假取消</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/1/n14045944.md#1">本土登革热疫情升温 屏东鼓励通报推奖励政策</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046681.md#1">前镇渔港预算遭抹黑直球对决 陈其迈问侯是否支持</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049443.md#1">循古礼“转大人” 竹市成年礼七夕竹莲寺登场</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048533.md#1">国税局苗栗分局防制私烟宣导 亲子同欢寓教于乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048550.md#1">苗栗市、头份市表扬模范父亲暨好人好事代表</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048555.md#1">竹南、头份地区豪大雨 县长紧急视察永贞抽水站功能</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105903.md#1">112年学习扶助 STEAM科技教育竞赛绩优团队  县府表扬</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105917.md#1">苗县食安优良评选   99家业荣获优良标章</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/30/n14105890.md#1">投资诈骗要小心 一提二汇三见底</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/29/n14105307.md#1">“童心一起go”亲子运动会 节能减碳宣导</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/1/n10607931.md#1" target="_blank">林辉：中共红军“三大纪律”掩盖下的恶行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/16/n11525726.md#1" target="_blank">密州狂欢节 市长：法轮大法给世界带来美好</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/20/n10073567.md#1" target="_blank">中共教育投入与民国时期的教育投入</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/27/n10092593.md#1" target="_blank">大学教授修炼身心受益 反迫害控告江泽民</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046260.md#1">美调查记者：俄战机曾与UFO交战至少45次</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045197.md#1">【未解之谜】释迦座下神通第一 目犍连</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14047678.md#1">【未解之谜】证明轮回存在的基督徒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/27/n14042958.md#1">春秋首霸齐桓公享富裕奢华  死况极端凄惨预警成真</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/25/n14041544.md#1">清代三医生治疫有偏方 以济世之心救人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/6/n14048997.md#1">【时事军事】乌神风无人艇带来不对称优势</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049428.md#1">【全球新闻】北京门头沟居民：无预警泄洪酿祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048651.md#1">【新闻五人行】赶走民间救援队 河北洪灾掩真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048570.md#1">不满造假宣传 河北霸州灾民抗议 爆警民冲突</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048292.md#1">官媒宣称陆军第82集团军救灾 被村民曝光造假</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048149.md#1">北京门头沟水库同时泄洪 有村庄几乎被灭顶</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048276.md#1">刀郎爆红后现身新疆党委学习 官媒报导被秒删</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048222.md#1">吴镇宇严格指导演技 吓得大陆女团成员落泪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048210.md#1">日花样滑冰名将羽生结弦宣布结婚 推特曝喜讯</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/4/n14048142.md#1">黄子佼涉猥亵案35万交保 限制出境出海</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/5/n14048558.md#1">韩韶禧为工作瘦身：美的标准不能以胖瘦决定</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14045425.md#1">每天睡不饱？医师教你3招抗炎 打造不累体质</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/13/n14033232.md#1">58岁医师没有老花、近视  就靠这3招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/22/n14039775.md#1">虾中含砷 与维他命C同吃会砒霜中毒吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/2/n14046478.md#1">人生不一定要追求完美 八十五分胜一百分</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/30/n14044381.md#1">驼背导致背痛 你应避免这些动作</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/29/n14083880.md#1">皇帝小故事：梦见乘龙飞天 唐朝一帝为何自比乡贡进士？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/25/n14102423.md#1">托斯卡纳温泉村出土青铜雕像：改写历史的新发现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101380.md#1">【未解之谜】朵洛莉丝催眠故事（3）跨越400年的视频？！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100508.md#1">唐玄宗射箭中飞鹤  见证道人化鹤功夫</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100256.md#1">幽幽古琴 唐诗如何表现它的美</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104205.md#1">【环球直击】李克强生前喊话引议 习李不合 团派全灭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105073.md#1">【时事金扫描】传普京心脏病发 俄辟谣被打假</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14105062.md#1">【马克时空】美军增兵中东 第四代战机宝刀不老</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104592.md#1">内斗激烈 传李克强猝死前被软禁在上海</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104952.md#1">网传李克强灵车在上海曙光医院布置细节</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104665.md#1">黑洞吞噬恒星数年后才吐出碎片 打破固有认知</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104151.md#1">澳洲网红逛夜市被当“死侍” 网问穿西装不热吗</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104522.md#1">胡杏儿婚后四年得三子 曝丈夫想要个女儿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104062.md#1">自己的替身瘫痪 “哈利波特”将事件制成纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104204.md#1">破产3年尚积欠6千万 澎恰恰回首导演梦谈心境</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104309.md#1">“MeToo”运动曾让亨利卡维尔怕和女性说话</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104552.md#1">防李克强猝死悲剧！心脏病突发按2穴位能救命</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14102115.md#1">糖真的致癌吗？专家揭秘糖和癌症的7大关联</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/28/n14104690.md#1">新冠病毒入侵心脏动脉 6类长寿食物护心脏</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/19/n14098485.md#1">米是一味药！米中四宝补肾护肺肠胃好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/27/n14104170.md#1">心理学家：快乐会传染 但悲伤不会</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/7/n14049436.htm">登革热苗栗首例本土确诊 县长率队清除孳生源</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/7/n14049436.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
